Corrected spacing

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ h2 {
     position: relative;
     height: 300px;
     padding: 10px;
-    width: 400px;
+    width: 500px;
     background: #eee;
     top: 30px;
     left: 15%;
@@ -62,27 +62,28 @@ h2 {
   
 #absolute {
     position: absolute;
-    top: 80px;
+    top: 70px;
     right: 30px;
     bottom: 20px;
     height: 200px;
-    width: 350px;
+    width: 450px;
     padding: 5px;
     background: #999;
-    float: left;
   }
 
 aside {
+    position: absolute;
     background: #ebebeb;
-    width: 200px;
-    height: 200px;
+    width: 400px;
+    height: 320px;
+    top: 0px;
+    right: -410px;
+    bottom: 20px;
 }
 
 footer {
-    clear: both;
-    overflow: auto;
     background: #ebebeb;
     width: 70%;
     padding: 10px;
-    margin: 40px 195px;
+    margin: 40px 15%;
 }
